@@ -227,6 +227,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3894. RM startup should fail for wrong CS xml NodeLabel capacity
     configuration. (Bibin A Chundatt via wangda)
 
+    YARN-3932. SchedulerApplicationAttempt#getResourceUsageReport and UserInfo 
+    should based on total-used-resources. (Bibin A Chundatt via wangda)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
@@ -1410,7 +1413,6 @@ Release 2.6.0 - 2014-11-18
     YARN-2406. Move RM recovery related proto to
     yarn_server_resourcemanager_recovery.proto. (Tsuyoshi Ozawa via jianhe)
 
-<<<<<<< HEAD
     YARN-1506. Changed RMNode/SchedulerNode to update resource with event
     notification. (Junping Du via jianhe)
 
